--- a/index.html
+++ b/index.html
@@ -35,9 +35,26 @@
                 </div>
 
                 <div class="pay-list">
-                    <div class="pay-bar" onclick="selectPay('DANA', this)"><span>DANA</span><img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Logo_danain.png"></div>
-                    <div class="pay-bar" onclick="selectPay('QRIS', this)"><span>QRIS</span><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Logo_QRIS.svg/1200px-Logo_QRIS.svg.png"></div>
-                </div>
+    <div class="pay-bar" onclick="selectPay('DANA', this)">
+        <span>DANA</span>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/Logo_dana_blue.svg/1200px-Logo_dana_blue.svg.png">
+    </div>
+
+    <div class="pay-bar" onclick="selectPay('OVO', this)">
+        <span>OVO</span>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Logo_ovo_purple.svg/1200px-Logo_ovo_purple.svg.png">
+    </div>
+
+    <div class="pay-bar" onclick="selectPay('GOPAY', this)">
+        <span>GOPAY</span>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/Gopay_logo.svg/1200px-Gopay_logo.svg.png">
+    </div>
+
+    <div class="pay-bar" onclick="selectPay('QRIS', this)">
+        <span>QRIS</span>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Logo_QRIS.svg/1200px-Logo_QRIS.svg.png">
+    </div>
+</div>
                 <button id="btnGas" class="btn-primary" disabled onclick="prosesPesanan()">BAYAR SEKARANG</button>
             </div>
 
@@ -89,4 +106,5 @@
 
 <script src="script.js"></script>
 </body>
+
 </html>
