--- a/index.html
+++ b/index.html
@@ -75,24 +75,24 @@
     </div>
 
     <div id="slide-2" class="slide">
-        <div class="card text-center">
-            <div class="loader-wrap"><i class="fas fa-qrcode"></i></div>
-            <h2 class="title">Selesaikan Pembayaran</h2>
-            
-            <div class="invoice-card">
-                <div class="inv-row"><span>Order ID:</span> <b id="displayTid"></b></div>
-                <div class="inv-row"><span>Total:</span> <b id="payNominal" style="color:var(--primary)"></b></div>
-                <div class="inv-row"><span>Metode:</span> <b id="payMethodInfo"></b></div>
-            </div>
-
-            <div id="qris-display" style="display:none; background:white; padding:15px; border-radius:15px; margin: 15px 0;">
-                <p style="color:black; font-weight:800; margin-bottom:10px; font-size:12px;">SCAN QRIS XZYO STORE</p>
-                <img id="gambar-qris" src="https://drive.google.com/uc?export=view&id=1LkkjYoIP_Iy_LQx4KEm8TtXiI5q57IfJ" style="width:100%; max-width:200px; height:auto;">
-            </div>
-
-            <p style="font-size:12px; color:#8b949e;">Silakan transfer sesuai nominal, lalu tunggu admin memproses pesananmu.</p>
+    <div class="card text-center">
+        <div class="loader-wrap"><i class="fas fa-qrcode"></i></div>
+        <h2 class="title">Selesaikan Pembayaran</h2>
+        
+        <div class="invoice-card">
+            <div class="inv-row"><span>Order ID:</span> <b id="displayTid"></b></div>
+            <div class="inv-row"><span>Total:</span> <b id="payNominal" style="color:var(--primary)"></b></div>
+            <div class="inv-row"><span>Metode:</span> <b id="payMethodInfo"></b></div>
         </div>
+
+        <div id="qris-display" style="display:none; background:white; padding:15px; border-radius:15px; margin: 15px auto; max-width: 250px;">
+            <p style="color:black; font-weight:800; margin-bottom:10px; font-size:12px;">SCAN QRIS XZYO STORE</p>
+            <img id="gambar-qris" src="" style="width:100%; height:auto; display:block; margin:0 auto;">
+        </div>
+
+        <p style="font-size:12px; color:#8b949e; margin-top:10px;">Silakan transfer sesuai nominal, lalu tunggu admin memproses pesananmu.</p>
     </div>
+</div>
 
     <div id="slide-3" class="slide">
         <div class="card text-center">
@@ -125,4 +125,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
