--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="inv-row"><span>Metode:</span> <b id="payMethodInfo"></b></div>
         </div>
 
-        <div id="qris-display" style="display:none; background:white; padding:15px; border-radius:15px; margin: 15px auto; max-width: 250px;">
+        <div id="qris-display" style="display:none; background:white; padding:15px; border-radius:15px; margin: 15px auto; max-width: 250px; text-align:center;">
             <p style="color:black; font-weight:800; margin-bottom:10px; font-size:12px;">SCAN QRIS XZYO STORE</p>
             <img id="gambar-qris" src="" style="width:100%; height:auto; display:block; margin:0 auto;">
         </div>
@@ -125,5 +125,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
