--- a/index.html
+++ b/index.html
@@ -97,8 +97,11 @@
     <div id="slide-3" class="slide">
         <div class="card text-center">
             <div class="success-animation">
-                <div class="checkmark-circle"><i class="fas fa-check checkmark-icon"></i></div>
-            </div>
+    <svg class="checkmark-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+        <circle class="checkmark-circle-path" cx="26" cy="26" r="25" fill="none"/>
+        <path class="checkmark-check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
+    </svg>
+</div>
             <h1 style="color:var(--accent)">BERHASIL DI-CONFIRM!</h1>
             <div class="invoice-card">
                 <div class="inv-row"><span>Order ID:</span><b id="res-id">--</b></div>
@@ -125,6 +128,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
